--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
 </head>
 <body>
     
+    <input id="order-list-1" type="text" placeholder="order-1">
+    <input id="order-list-2" type="number" placeholder="order-2">
+    <button onclick="superSop()">Done</button>
+
+    <div>
+        <ul id="list"></ul>
+    </div>
+    <!-- script -->
+     <script src="./js/index.js"></script>
 </body>
 </html>
