--- a/card.html
+++ b/card.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Avengers</title>
+    <style>
+        .container{
+            width: 1440px;
+            padding: 100px 40px;
+            display: grid;
+            grid-template-columns: 4fr, 1fr;
+            gap: 24px;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-
+        <img src="./images/pexels-aomata-14565669.jpg" alt="pic">
+        <img src="./images/pexels-mukund-patel-1264723-14496789.jpg" alt="pic">
+        <img src="./images/pexels-toulouse-3098970.jpg" alt="pic">
+        <img src="./images/stones-167089_1280.jpg" alt="pic">
     </div>
 </body>
 </html>
